(chore:server): configure cors to work on different ports

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "lerna run start --stream",
     "dev": "lerna run dev --stream",
     "prod": "lerna run start-prod --stream",
-    "test": "lerna run test --stream"
+    "test": "lerna run test --stream",
+    "lint": "lerna run lint --stream"
   },
   "devDependencies": {
     "lerna": "^5.1.4"
