--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Starter point for a graphQL course",
   "main": "index.js",
-
   "scripts": {
     "dev": "nodemon index.js --ignore client"
   },
@@ -14,10 +13,11 @@
     "babel-preset-env": "^1.1.8",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
+    "cors": "^2.8.5",
     "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.15.0",
-    "graphql": "^0.8.2",
+    "graphql": "15.3.0",
     "lodash": "^4.17.4",
     "mongoose": "latest",
     "nodemon": "*",
