--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "lerna run lint --stream"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@commitlint/config-lerna-scopes": "^17.0.2",
     "lerna": "^5.1.4"
   },
   "dependencies": {
