--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,7 +22,9 @@
     "mongoose": "latest",
     "nodemon": "*",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "undefined": "C:\\projects\\lyrical-graphql-monorepo\\packages\\web-ui",
+    "web-ui": "^0.1.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
