--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-ui",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,10 +9,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@apollo/react-hooks": "^4.0.0",
+    "@types/lodash": "^4.14.182",
+    "deepmerge": "^4.2.2",
     "graphql": "^16.5.0",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "undefined": "C:\\projects\\lyrical-graphql-monorepo\\packages\\web-ui"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
