--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "lerna run dev --stream",
     "prod": "lerna run start-prod --stream",
     "test": "lerna run test --stream",
-    "lint": "lerna run lint --stream"
+    "lint": "lerna run lint --stream",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/config-lerna-scopes": "^17.0.2",
+    "husky": "^8.0.0",
     "lerna": "^5.1.5"
   },
   "dependencies": {
