--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -12,6 +12,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@types/lodash": "^4.14.182",
     "deepmerge": "^4.2.2",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "next": "12.1.6",
