--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
     "@types/lodash": "^4.14.182",
     "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
-    "next": "12.1.6",
+    "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "undefined": "C:\\projects\\lyrical-graphql-monorepo\\packages\\web-ui"
@@ -24,8 +27,8 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
   }
 }
