--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/config-lerna-scopes": "^17.0.2",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "husky": "^8.0.0",
     "lerna": "^5.1.5"
   },
